--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index.js",
-    "test": "./tests.sh",
+    "test": "./tests.sh && jasmine",
+    "jasmine": "jasmine",
     "start": "node index.js"
   },
   "repository": {
@@ -17,5 +18,6 @@
   "dependencies": {
     "express": "^4.17.3",
     "nodemon": "^2.0.15"
-  }
+  },
+  "devDependencies": {}
 }
